<resources>
    <string name="app_name">NSS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_events">Events</string>
    <string name="menu_faqs">Faqs</string>
    <string name="menu_rules_policies">Rules-Policies</string>
    <string name="get_involved">Get Involved</string>
    <string name="menu_nss_team">NSS Team</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_prayatna">Prayatna</string>
    <string name="menu_think_thank">Think-Thank</string>
    <string name="menu_check_hours">Check-Hours</string>
    <string name="cells">Cells</string>
    <string name="menu_technical_skills">Technical Skills</string>
    <string name="menu_rural_development">Rural Development</string>
    <string name="menu_chetna">Chetna</string>
    <string name="menu_teaching">Teaching</string>
    <string name="environmental">Environmental</string>

</resources>
